@@ -19,7 +19,7 @@ abstract class BaseEventForm extends BaseFormDoctrine
       'category_id'         => new sfWidgetFormDoctrineChoice(array('model' => $this->getRelatedModelName('Category'), 'add_empty' => false)),
       'organiser_id'        => new sfWidgetFormDoctrineChoice(array('model' => $this->getRelatedModelName('Organiser'), 'add_empty' => false)),
       'title'               => new sfWidgetFormInputText(),
-      'description'         => new sfWidgetFormTextarea(),
+      'description'         => new sfWidgetFormInputText(),
       'start_date'          => new sfWidgetFormDateTime(),
       'end_date'            => new sfWidgetFormDateTime(),
       'start_hour'          => new sfWidgetFormTime(),
@@ -47,7 +47,7 @@ abstract class BaseEventForm extends BaseFormDoctrine
       'category_id'         => new sfValidatorDoctrineChoice(array('model' => $this->getRelatedModelName('Category'))),
       'organiser_id'        => new sfValidatorDoctrineChoice(array('model' => $this->getRelatedModelName('Organiser'))),
       'title'               => new sfValidatorString(array('max_length' => 64)),
-      'description'         => new sfValidatorString(array('max_length' => 512)),
+      'description'         => new sfValidatorPass(),
       'start_date'          => new sfValidatorDateTime(array('required' => false)),
       'end_date'            => new sfValidatorDateTime(array('required' => false)),
       'start_hour'          => new sfValidatorTime(),
